test/conformance/chainsaw/reports/admission/update/deployment-fail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dpl-1
spec:
  selector:
    matchLabels:
      app: test-dpl-1
  template:
    metadata:
      labels:
        app: test-dpl-1
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: test-container
        image: mirror.gcr.io/library/nginx:latest
