test/conformance/chainsaw/reports/admission/update/deployment-fail-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dpl-1
status:
  observedGeneration: 1
  updatedReplicas: 1
  readyReplicas: 1
  replicas: 1
