test/conformance/chainsaw/reports/admission/update/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
