test/conformance/chainsaw/reports/admission/update/report-fail-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: test-dpl-1
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: test-dpl-1
results:
- message: 'validation error: Using a mutable image tag e.g. ''latest'' is not allowed.
    rule autogen-validate-image-tag-pod failed at path /spec/template/spec/containers/0/image/'
  policy: disallow-latest-tag
  result: fail
  rule: autogen-validate-image-tag-pod
  source: kyverno
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
