test/conformance/chainsaw/reports/admission/update/02-deployment-fail.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: deployment-fail
spec:
  try:
  - apply:
      file: deployment-fail.yaml
  - assert:
      file: deployment-fail-assert.yaml
