test/conformance/chainsaw/reports/admission/update/04-deployment-pass.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: deployment-pass
spec:
  try:
  - apply:
      file: deployment-pass.yaml
  - assert:
      file: deployment-pass-assert.yaml
