test/conformance/chainsaw/reports/admission/update/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: update
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: disallow-latest-tag
  - name: step-02
    try:
    - apply:
        file: deployment-fail.yaml
    - assert:
        file: deployment-fail-assert.yaml
  - name: step-03
    try:
    - assert:
        file: report-fail-assert.yaml
  - name: step-04
    try:
    - apply:
        file: deployment-pass.yaml
    - assert:
        file: deployment-pass-assert.yaml
  - name: step-05
    try:
    - assert:
        file: report-pass-assert.yaml
