test/conformance/chainsaw/reports/admission/update/03-report-fail-assert.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: report-fail-assert
spec:
  try:
  - assert:
      file: report-fail-assert.yaml
