test/conformance/chainsaw/reports/admission/update/05-report-pass-assert.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: report-pass-assert
spec:
  try:
  - assert:
      file: report-pass-assert.yaml
